cmake_minimum_required(VERSION 3.4)

########################################################################################################################
### Project definition ###
########################################################################################################################
project(UOS_OpenDRIVE C CXX)
include(cmake/compile-options.cmake)
include(cmake/testing.cmake)
include(cmake/warnings.cmake)
include(cmake/hardening.cmake)

#convert list to string
string (REPLACE ";" " " TARGET_LINK_FLAGS "${TARGET_LINK_OPTIONS}")

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

set(PUGIXML_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/extern/pugixml")

########################################################################################################################
### External Dependencies ###
########################################################################################################################
add_subdirectory(extern)

########################################################################################################################
### Library ###
########################################################################################################################
add_subdirectory(src)

########################################################################################################################
### Executables ###
########################################################################################################################
#add_subdirectory(examples)

########################################################################################################################
### Standalone App ###
########################################################################################################################
#add_subdirectory(app)

########################################################################################################################
### Miscellaneous ###
########################################################################################################################
#add_subdirectory(misc)

########################################################################################################################
### Testing ###
########################################################################################################################
if (BUILD_TESTING)
    enable_testing()
    # add subdirectory
    add_subdirectory(test)
endif ()